crates/explainsql-core/tests/snapshots/report__seq_scan_limit_early_stop.snap
---
source: crates/explainsql-core/tests/report.rs
expression: text
---
0.060 ms. 52% of it in Seq Scan on orders.

Planning 0.475 ms · Execution 0.060 ms · Buffers 3 pages, 100% from cache

Share      Time              Node                   Rows        Estimate  Buffers
 3.3%  0.002 ms  ▍           Limit                    10              10        0
  52%  0.031 ms  █████▏      └─ Seq Scan on orders    10  10,253 ▼1,025×        3

No findings: none of the rules found a problem in this plan.

Share and Time: time spent in each node itself, wall-clock. Rows: actual rows per loop, ×loops when
it ran more than once. ▲/▼: actual rows above or below the estimate by 10× or more. Buffers: pages
each node read itself.
