crates/explainsql-core/tests/snapshots/report__seq_scan_or_across_columns.snap
---
source: crates/explainsql-core/tests/report.rs
expression: text
---
15.7 ms. 99% of it in Seq Scan on orders.

Planning 0.341 ms · Execution 15.7 ms · Buffers 2,417 pages, 80% from cache

Share     Time              Node                 Rows  Estimate  Buffers
  99%  15.6 ms  █████████▉  Seq Scan on orders  2,010     2,023    2,417

No findings: none of the rules found a problem in this plan.

Share and Time: time spent in each node itself, wall-clock. Rows: actual rows per loop, ×loops when
it ran more than once. ▲/▼: actual rows above or below the estimate by 10× or more. Buffers: pages
each node read itself.
