crates/explainsql-core/tests/snapshots/report__seq_scan_tiny_table.snap
---
source: crates/explainsql-core/tests/report.rs
expression: text
---
0.041 ms. 32% of it in Seq Scan on settings_kv.

Planning 0.426 ms · Execution 0.041 ms · Buffers 1 pages, 100% from cache

Share      Time              Node                     Rows  Estimate  Buffers
  32%  0.013 ms  ███▏        Seq Scan on settings_kv     7         7        1

No findings: none of the rules found a problem in this plan.

Share and Time: time spent in each node itself, wall-clock. Rows: actual rows per loop, ×loops when
it ran more than once. ▲/▼: actual rows above or below the estimate by 10× or more. Buffers: pages
each node read itself.
