crates/explainsql-core/tests/snapshots/report__sort_external_merge.snap
---
source: crates/explainsql-core/tests/report.rs
expression: text
---
379.5 ms. 92% of it in Sort, which spilled 9.1 MB to disk.

Planning 0.319 ms · Execution 379.5 ms · Buffers 2,420 pages, 88% from cache, 38.4 MB written to
temporary files

Share      Time              Node                      Rows  Estimate  Buffers
  92%  350.3 ms  █████████▎  Sort                   200,000   200,000        3
 5.8%   22.1 ms  ▋           └─ Seq Scan on orders  200,000   200,000    2,417

Findings (1)

  HIGH    ES003 Sort spilled to disk
          Sort spilled 9.1 MB to disk.
          Sort method: external merge
          Disk used: 9.1 MB
          Sort key: orders.note
          Time in the node: 350.3 ms (92% of the runtime)
          → Raise work_mem so that the sort fits in memory. For this statement alone: SET LOCAL
          work_mem = '32MB' in its transaction. Every session that runs the statement at the same
          time may take that much. Or avoid the sort with an index that returns rows ordered by
          orders.note.

Share and Time: time spent in each node itself, wall-clock. Rows: actual rows per loop, ×loops when
it ran more than once. ▲/▼: actual rows above or below the estimate by 10× or more. Buffers: pages
each node read itself.
